--- a/lib/stm32/u5/Makefile
+++ b/lib/stm32/u5/Makefile
@@ -43,7 +43,12 @@ OBJS += usart_common_all.o usart_common_v2.o
 OBJS += gpio_common_all.o gpio_common_f0234.o
 OBJS += rcc.o rcc_common_all.o
 
-VPATH += ../:../../cm3:../common
+OBJS += usb.o usb_standard.o usb_control.o usb_msc.o
+OBJS += usb_hid.o usb_bos.o usb_microsoft.o
+OBJS += usb_audio.o usb_cdc.o usb_midi.o
+OBJS += usb_dwc_common.o usb_f107.o usb_f207.o
+
+VPATH += ../../usb:../:../../cm3:../common
 
 include ../../Makefile.include
 
